# Vote

./: .gitignore  Cargo.toml
locales/: en.yml  pl.yml
migrations/: 20230209224802_init.sql
src/: main.rs
src/embed_builders/: author.rs
src/event_handlers/: message.rs  mod.rs  reaction_add.rs  ready.rs
src/voting/: a_create.rs  b_confirm.rs  c_verify.rs  d_publish.rs  mod.rs
