[package]
name = "watchman-vote"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
once_cell = "1.17.0"
rust-i18n = "1.1.1"
serenity = { version = "0.11", default-features = false, features = ["client", "gateway", "rustls_backend", "model"] } 
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread"] }

[package.metadata.i18n]
# The available locales for your application, default: ["en"].
available-locales = ["en", "pl"]

# The default locale, default: "en".
default-locale = "pl"

# Path for your translations YAML file, default: "locales".
# This config for let `cargo i18n` command line tool know where to find your translations.
# You must keep this path is same as the path you pass to `rust_i18n::i18n!` method.
# load-path = "locales"